Well, it doesn't work right.  But it does build!
- Main.java:
  * Corrected the type of world_tiles.
  * Turned textures from a list into a map (it made things easier to
    insert into their proper place.)
  * (renderTileLayer()): New function.  It's supposed to render the
    tiles, but my offset trick ain't right, and the rendered tiles
    "jitter and shake" as the player moves across them.

The libGDX TileMap is starting to look pretty good about now.  While I
could get the math here right with my current approach, what's the
point?